<resources>
    <string name="app_name">LoginAct</string>

    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="find_Id">아이디 찾기</string>
    <string name="find_Pwd">비밀번호 찾기</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="email">이메일</string>

    <string name="signup_hint_id">영문/숫자 입력</string>
    <string name="signup_hint_pwd">영문/숫자/특수문자 혼용하여 입력</string>
    <string name="signup_check_pwd">비밀번호 확인</string>
    <string name="signup_hint_email">이메일 입력</string>
    <string name="signup_email_detail">이메일로 인증 링크가 발송되며, 링크 클릭 시 회원가입이 완료됩니다.</string>

    <string name="login_title">회원 로그인</string>

</resources>