<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kmskt.prototype.login.SignupActivity">

        <!-- 회원가입 제목 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_title"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#FFFFC700">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/signup"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toTopOf="parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_outside"
            android:layout_marginEnd="@dimen/login_outside"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/signup_title"
            android:orientation="vertical">

            <!-- 아이디 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/id"
                android:textSize="20sp"
                android:textColor="@color/big_gray"
                android:textStyle="bold" />
            <!-- 아이디 입력-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_hint_id"
                    android:textSize="15sp"
                    android:textColorHint="#FF808080"
                    android:selectAllOnFocus="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- 비밀번호 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="@color/big_gray"
                android:textStyle="bold"/>
            <!-- 비밀번호 입력 -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_hint_pwd"
                    android:textSize="15sp"
                    android:textColor="@color/small_gray"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- 비밀번호 재확인 -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_check_pwd"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- 이메일 입력-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_email_detail"
                android:textSize="11sp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_hint_email"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- 회원가입 버튼 -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="@dimen/login_outside"
            android:layout_marginEnd="@dimen/login_outside"
            android:text="@string/signup"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@drawable/round_button"
            app:layout_constraintTop_toBottomOf="@id/signup_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>